--- a/static-tweet/src/index.css
+++ b/static-tweet/src/index.css
@@ -16,3 +16,13 @@
 	margin-right: 10px;
 }
 
+.name {
+	font-weight: bold;
+	margin-bottom: 0.5em;
+	margin-right: 0.3em;
+}
+
+.handle {
+	color: #8899a6;
+	font-size: 13px;
+}
